--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,9 @@
-# Required for NextAuth sessions
-NEXTAUTH_SECRET=replace_with_long_random_secret
-NEXTAUTH_URL=http://localhost:3000
+# Optional only. App can be configured fully via in-app onboarding.
+# Use these only if you prefer environment overrides.
 
-# Optional: run without OAuth login for local demo/dev
-DEV_BYPASS_LOGIN=true
-NEXT_PUBLIC_DEV_BYPASS_LOGIN=true
-
-# Optional fallback API key if user does not type one in UI
+NEXTAUTH_SECRET=
 OPENAI_API_KEY=
 
-# OpenAI OAuth provider settings (required if DEV_BYPASS_LOGIN=false)
 OPENAI_OAUTH_ISSUER=
 OPENAI_OAUTH_CLIENT_ID=
 OPENAI_OAUTH_CLIENT_SECRET=
@@ -17,8 +11,7 @@ OPENAI_OAUTH_AUTH_URL=
 OPENAI_OAUTH_TOKEN_URL=
 OPENAI_OAUTH_USERINFO_URL=
 
-# App updater settings
 APP_REPO_PATH=
-APP_UPDATE_BRANCH=main
+APP_UPDATE_BRANCH=
 APP_RESTART_COMMAND=
 APP_UPDATE_TOKEN=
