--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next-auth": "^4.24.13",
     "openai": "^6.25.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "@tailwindcss/postcss": "^4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
